unpackaged/main/default/objects/fferpcore__Mapping__c/fferpcore__Mapping__c.object-meta.xml
<CustomObject>
    <description>Stores details of custom mappings.</description>
    <label>Mapping</label>
    <nameField>
        <displayFormat>MAP-{00000}</displayFormat>
        <label>Mapping ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Mappings</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>