unpackaged/main/default/objects/fferpcore__Mapping__c/fields/fferpcore__AdditionalLookupField__c.field-meta.xml
<CustomField>
    <fullName>fferpcore__AdditionalLookupField__c</fullName>
    <description>The additional source field to compare to identify a unique record.</description>
    <label>Additional Lookup Field</label>
    <length>255</length>
    <type>Text</type>
</CustomField>