unpackaged/main/default/objects/fferpcore__Mapping__c/fields/fferpcore__CorrelationSourceKey__c.field-meta.xml
<CustomField>
    <fullName>fferpcore__CorrelationSourceKey__c</fullName>
    <description>For child mappings, the source field that contains the record's unique identifier.</description>
    <label>Unique Identifier on Source</label>
    <length>255</length>
    <type>Text</type>
</CustomField>