unpackaged/main/default/objects/fferpcore__Mapping__c/fields/fferpcore__CorrelationStrategy__c.field-meta.xml
<CustomField>
    <fullName>fferpcore__CorrelationStrategy__c</fullName>
    <description>The creation method that defines how to create and maintain linked records.</description>
    <label>Record Creation Method</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Append</fullName>
            </value>
            <value>
                <fullName>Replace</fullName>
            </value>
            <value>
                <fullName>Update</fullName>
            </value>
            <value>
                <fullName>UpdateTotal</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>