unpackaged/main/default/objects/fferpcore__Mapping__c/fields/fferpcore__CorrelationTargetKey__c.field-meta.xml
<CustomField>
    <fullName>fferpcore__CorrelationTargetKey__c</fullName>
    <description>For child mappings, the field on the target in which to store the source record's unique identifier. The unique identifier is compared when updating records.</description>
    <label>Identifier Reference on Target</label>
    <length>255</length>
    <type>Text</type>
</CustomField>