unpackaged/main/default/objects/fferpcore__Mapping__c/fields/fferpcore__Identifier__c.field-meta.xml
<CustomField>
    <fullName>fferpcore__Identifier__c</fullName>
    <description>Optional identifier for the mapping.</description>
    <label>Mapping Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>