unpackaged/main/default/objects/fferpcore__Mapping__c/fields/fferpcore__LookupField__c.field-meta.xml
<CustomField>
    <fullName>fferpcore__LookupField__c</fullName>
    <description>The source field to compare to identify a unique record.</description>
    <label>Lookup Field</label>
    <length>255</length>
    <type>Text</type>
</CustomField>