unpackaged/main/default/objects/fferpcore__Mapping__c/fields/fferpcore__Process__c.field-meta.xml
<CustomField>
    <fullName>fferpcore__Process__c</fullName>
    <description>Name of the configuration item metadata record that contains the related process.</description>
    <label>Process</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>