unpackaged/main/default/objects/fferpcore__Mapping__c/fields/fferpcore__SourceKeys__c.field-meta.xml
<CustomField>
    <fullName>fferpcore__SourceKeys__c</fullName>
    <description>Keys to extract data from source.</description>
    <label>Source Keys</label>
    <length>255</length>
    <type>Text</type>
</CustomField>