unpackaged/main/default/objects/fferpcore__Mapping__c/fields/fferpcore__SourcePath__c.field-meta.xml
<CustomField>
    <fullName>fferpcore__SourcePath__c</fullName>
    <description>The relationship path from the source to the specified source key.</description>
    <label>Source Path</label>
    <length>255</length>
    <type>Text</type>
</CustomField>