unpackaged/main/default/objects/fferpcore__Mapping__c/fields/fferpcore__StaticData__c.field-meta.xml
<CustomField>
    <fullName>fferpcore__StaticData__c</fullName>
    <description>The exact value to map to the target location.</description>
    <label>Source Data</label>
    <length>255</length>
    <type>Text</type>
</CustomField>