unpackaged/main/default/objects/fferpcore__Mapping__c/fields/fferpcore__TargetChildType__c.field-meta.xml
<CustomField>
    <fullName>fferpcore__TargetChildType__c</fullName>
    <description>The category for the target child record. Target child types enable you to create multiple target child records from a single source child record. For example, Default, Debit Line, or Admin Fee.</description>
    <label>Target Child Type</label>
    <length>255</length>
    <type>Text</type>
</CustomField>