unpackaged/main/default/objects/fferpcore__Mapping__c/fields/fferpcore__TargetPath__c.field-meta.xml
<CustomField>
    <fullName>fferpcore__TargetPath__c</fullName>
    <description>The relationship path from the target to the specified target key.</description>
    <label>Target Path</label>
    <length>255</length>
    <type>Text</type>
</CustomField>