unpackaged/main/default/objects/fferpcore__Mapping__c/fields/fferpcore__TransformationTable__c.field-meta.xml
<CustomField>
    <fullName>fferpcore__TransformationTable__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>The data transformation table to apply to the mapping.</description>
    <label>Data Transformation Table</label>
    <referenceTo>fferpcore__DataTransformationTable__c</referenceTo>
    <relationshipLabel>Mappings</relationshipLabel>
    <relationshipName>Mappings</relationshipName>
    <type>Lookup</type>
</CustomField>