unpackaged/main/default/objects/fferpcore__Mapping__c/fields/fferpcore__Type__c.field-meta.xml
<CustomField>
    <fullName>fferpcore__Type__c</fullName>
    <description>Type of mapping, such as Standard or Relationship.</description>
    <label>Type</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Standard</fullName>
                <default>true</default>
                <label>Standard</label>
            </value>
            <value>
                <fullName>Relationship</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>